# beast-cppcon2018-vs-restinio

./: .hgignore  Dockerfile  LICENSE  README.md  externals.rb
dev/: CMakeLists.txt  build.rb  chat_client.html
dev/websocket_chat/: CMakeLists.txt  main.cpp  prj.rb
